# Crawler-Discord-Bot

./: .gitignore  Crawler.ptt.json  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
Bot/: __init__.py  bot.py
Bot/cogs/: Commands.py  Crawler.py  __init__.py
Bot/core/: Core.py
Features/: __init__.py
Features/API/: CozeApi.py
Features/Api/: CozeApi.py  OpenAIEmotionalAnalyzer.py  __init__.py
Features/crawler/: DcardCrawler.py  PttCrawler.py  __init__.py  connect_coze_api.py  coze_API.py
Features/test/: test.py
Mongo/: MongoDBManager.py  __init__.py
Mongo/adapter/: MongoAdapter.py  MongoBuilder.py  MongoDBAdapter.py  __init__.py
Route/: app.py
Router/: router.py
Router/methods/: __init__.py  crawlertocoze.py
Router/routes/: database.py  webservice.py
Router/static/css/: AboutUS.css  Main.css  aboutus.css  gmail.css  main.css
Router/static/js/: AboutUS.js  Main.js
Router/templates/: AboutUS.html  aboutus.html  contact.html  gmail.html  index.html
Static/js/: Main.js
config/: .env.example
final report/about us/: aboutcss.css  aboutjs.js  aboutmain.html
final report/about us/about us/: ada.css  ada.html
final report/gamil/: gmai.html  gmailcss.css
final report/main1/: main.html  script.js  style.css
src/: main.py
src/database/: __init__.py
src/database/adapter/: __init__.py  schema.py
src/database/models/: Ptt.py  __init__.py
